--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,7 @@ $background-color: #000F16;
 $gold: #B2854C;
 $grey: #ABB7B7;
 $light-grey: #D2D7D3;
+$white-grey: #EEEEEE;
 $pink: #F1A9A0;
 
 
@@ -38,12 +39,21 @@ header{
 		height: 70px;
 		padding-top: 1em;
 	}
+
 }
 
 header .container{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+
+	@media only screen 
+	and (min-device-width : 768px) 
+	and (max-device-width : 1024px) 
+	and (orientation : landscape) {
+		padding-right: 30px;
+
+	}
 
 
 	.icon-button{
@@ -100,6 +110,9 @@ header .container:after{ content: normal; }
 
 .container .main-menu{
 
+	
+
+
 	@media screen and (max-width: 600px){
 		display: none;
 	}
@@ -111,6 +124,7 @@ header .container:after{ content: normal; }
 		justify-content: space-between;
 
 		ul li{
+
 			display: inline-block;
 			margin-bottom: 0;
 			padding-bottom: 0;
@@ -121,8 +135,11 @@ header .container:after{ content: normal; }
 			border-color: black transparent;
 
 
+
 			li:hover{
-				background-color: $pink;	
+				background-color: $pink;
+				color: white;
+
 			}
 		}
 
@@ -152,12 +169,15 @@ header .container:after{ content: normal; }
 		}
 		.sub-menu li{
 			display: block;
+			padding: 5px 10px 5px 10px;
+
 
 			
 			@media screen and (min-width: 600px){
 				a:hover{
 					border-bottom: none;
 					text-decoration: none;
+
 				}
 			}
 		}
@@ -181,7 +201,7 @@ header .container:after{ content: normal; }
 }
 
 .container-white{
-	background-color: #EEEEEE;
+	background-color: $white-grey;
 	//border-bottom: 1px dotted $grey;
 
 	h2{
@@ -194,6 +214,7 @@ header .container:after{ content: normal; }
 	}
 }
 
+/* Navigation */
 
 ul{
 	text-decoration: none;
@@ -242,6 +263,7 @@ ul{
 }
 
 a .header-logo{
+
 	@media screen and (max-width: 600px){
 		display: none;
 	}
@@ -349,7 +371,7 @@ a:hover{
 	left: 0;
 	width: 100%;
 	transition: top 0.4s ease;
-	background: $gold;
+	background: $pink;
 	text-align: center;
 
 	
@@ -397,10 +419,29 @@ a:hover{
 	width: 110px;
 	//background-color: $gold;
 
+	@media only screen 
+	and (min-device-width : 768px) 
+	and (max-device-width : 1024px) 
+	and (orientation : landscape) {
+		padding: 5px;
+		width: 180px;
+
+	}
+
 
 	#left{
 		padding-right: 15px;
 		border-right: 1px solid white;
+	}
+
+	#right{
+			@media only screen 
+		and (min-device-width : 768px) 
+		and (max-device-width : 1024px) 
+		and (orientation : landscape) {
+			//padding-left: 5px;
+
+		}
 	}
 
 
@@ -574,17 +615,55 @@ body.show_sidemenu .pusher{
 	
 	@media screen and (min-width: 600px){
 		top: 630px;
-		height: 1500px; /* Demo purposes */
+		//height: 1500px; /* Demo purposes */
 	}
 }
 
+.space{
+	margin-bottom: 50px;
+}
+
+
+
+
 .promotion-box{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
+	
 	margin: 10px;
+	margin-bottom: 50px;
 	//background-color: white;
-	border: 5px solid white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center; 
+
+	@media screen and (min-width: 600px){
+		flex-direction: row;
+	}	
+
+	 #wpcf-field-promotion_box,
+	 #wpcf-field-promotion_box-2{
+	 	border: 2px solid white;
+	 	//height: 200px;
+	 	font-size: 2em;
+	 	padding: 20px;
+	 	margin-bottom: 20px;
+	 	color: $gold;
+	 	display: flex;
+	 	justify-content: center;
+	 	vertical-align: center;
+	 	flex-direction: column;
+	 	text-align: center;
+
+	 	@media screen and (min-width: 600px){
+			width: 45%;
+			margin: 30px;
+			letter-spacing: 2px;
+
+			display: flex;
+	 		justify-content: center;
+	 		vertical-align: center;
+	 		text-align: justify;
+		}
+	}
 
 	img{
 		width: 20px;
@@ -594,13 +673,19 @@ body.show_sidemenu .pusher{
 
 
 	p{
-		color: $gold;
+		color: $light-grey;
 		font-family: 'Open Sans';
 		font-size: 2.3em;
 		text-align: justify;
 		padding: 10px;
 		
 	}
+
+}
+
+.row{
+	margin-top: 50px;
+	width: 100%;
 }
 
 /*-------------------------- Page Two Columns ---------------------------------*/
@@ -779,7 +864,11 @@ h2{
 
 See separate stylesheet: 'easy-responsive-tabs.css'
 
-//
+//*/
+
+.resp-tabs-container{
+	margin-bottom: 50px;
+}
 
 
 /*------------------------------------ Booking Form -----------------------------*/
@@ -788,9 +877,46 @@ See separate stylesheet: 'easy-responsive-tabs.css'
 //.birs_form_field.birs_appointment_location { display: none; }
 
 #booking-form{
-	background-color: white;
+	background-color: $white-grey;;
 	padding: 5px;
+
+	p{
+		font-family: 'Open Sans';
+	}
+
+	select{
+		font-family: 'Open Sans';
+		letter-spacing: 2px;
+		border: none;
+		margin: 5px;
+	}
+
+	option{
+		font-family: 'Open Sans';
+	}
+
+	input[type="button"]{
+		border: none;
+		font-family: 'Open Sans';
+		margin: 10px;
+		padding: 10px;
+	}
+
+	.appointments-legend{
+		display: flex;
+		flex-direction: column;
+	}
 }
+
+.booking{
+	@media screen and (max-width: 600px){
+		padding: 5px;
+		padding-top: 40px;
+	}
+
+	padding-top: 20px;
+}
+
 
 
 /*------------------------------------ Appointments+ Page -----------------------------*/
@@ -801,78 +927,6 @@ See separate stylesheet: 'easy-responsive-tabs.css'
 }
 
 /*------------------------------------ Register Form -----------------------------*/
-
-/*div#register-form {
-    width: 400px; 
-    overflow: hidden; 
-    height: 270px; 
-    position: relative; 
-    background: #f9f9f9; //url(images/secure.png) no-repeat 260px 40px; 
-    font-family: Helvetica Neue, Helvetica, Arial !important;
-}
-
-div#register-form input[type="text"] {
-    display: block;
-    border: 1px solid #ccc;
-    margin: 5px 20px;
-    padding: 9px 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius:4px;
-    width: 200px;
-    font-family: Helvetica Neue, Helvetica, Arial !important;
-    color: $background-color; 
-}
- 
-div#register-form input[type="text"]:hover {
-    border-color: #b1b1b1;
-
-}
- 
-div#register-form input[type="text"]:focus {
-    -moz-box-shadow: 0 0 3px #ccc;
-    -webkit-box-shadow: 0 0 3px #ccc;
-}
-
-div#register-form input[type="submit"]#register {
-    background: url(images/register.jpg) no-repeat;
-    border: 0;
-    clear: both;
-    cursor: pointer;
-    height: 31px;
-    overflow: hidden;
-    position: relative;
-    left:295px;
-    text-indent: -9999px;
-    top:42px;
-    width:92px;
-}
-div#register-form input[type="submit"]#register:hover {
-    background-position: 0 -32px;
-}
-
-#register-form span {
-    display: block;
-    margin-bottom: 22px;
-    color: $gold;
-}
- 
-#register-form .title {margin-left:15px}
-#register-form .title h1,
-#register-form .title h1 {
-    margin:7px 0;
-    color: $gold;
-}
- 
-p.statement {
-    position:absolute;
-    bottom:-2px;
-    left:10px;
-    font-size:.9em;
-    color: $gold;
-}*/
-
-
-/*--------- Version 2 -----------*/
 
 .register-pic{
 	background:
@@ -892,7 +946,7 @@ p.statement {
 }
 
 .container.register{
-	margin-top: 20vh;
+	margin-top: 10vh;
 	color: $background-color;
 	background-color: rgba(255, 255, 255, 0.6);
 	border-radius: 2px;
@@ -901,8 +955,49 @@ p.statement {
 	box-shadow: 0 0 5px #555;
 
 	@media screen and (min-width: 600px){
-		width: 35%;
-		padding: 50px;
+		width: 40%;
+		padding: 35px;
+		padding-top: 10px;
+	}
+
+	.complete a{
+		color: #6C7A89;
+		border-bottom: 1px solid #6C7A89;
+	}
+
+	label{
+		display: block;
+		margin-bottom: 0px;
+		font-size: 14px;
+		color: #6C7A89;
+	}
+
+	input[type="text"],
+	input[type="email"],
+	input[type="password"]{
+		width: 80%;
+
+	}
+
+	.reg-form{
+		padding-top: 10px;
+	}
+
+	.error-msg{
+		display: block;
+		color: #F64747;
+	}
+
+	.form-title{
+		margin-bottom: 10px;
+
+		p{
+			margin: 0px;
+			text-align: center;
+			font-size: 1.5em;
+			color: #6C7A89;
+
+		}
 	}
 }
 
@@ -962,6 +1057,16 @@ p.statement {
 .div.wpcf7-mail-sent-ok{
 	border: 1px dotted $pink;
 
+}
+
+.hours{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	letter-spacing: 2px;
+	line-height: 2;
+	color: white;
 }
 
 
@@ -1029,7 +1134,8 @@ p.statement {
     //position: fixed;
 }
 .login-form{
-	background-color: rgba(255, 255, 255, 0.6);
+	//background-color: rgba(255, 255, 255, 0.6);
+	background-color: $white-grey;
 	margin-top: 20vh;
 	border-radius: 2px;
 	-moz-box-shadow: 0 0 5px #555;
@@ -1058,8 +1164,8 @@ input[type="submit"]{
 	margin-top: 30px;
 	padding: 10px 20px 10px 20px;
 	border: none;
-	background-color: white;
-	color: $background-color;
+	background-color: $background-color;
+	color: white;
 	font-family: 'Open Sans';
 }
 
@@ -1086,33 +1192,131 @@ input[type="submit"]{
 
 /*------------------------------------ Footer -----------------------------*/
 footer{
-	display: flex;
-	justify-content: space-between;
 	background-color: white;
-	height: 50px;
-	margin-bottom: 0px;
-	z-index: 10;
-	width: 100%;
+	padding-bottom: 20px;
 
-	@media screen and (min-width: 600px){
-		height: 250px;
+	.mobile{
+		display: none;
+
+		.footer-pic{
+
+			@media screen and (max-width: 600px){
+				background-image: url("img/logo-gold.png");
+				background-size: 100% 100%;
+				height: 40px;
+				width: 40px;
+				-webkit-transform: scale(0.8);
+				margin: 5px 10px 0 10px;
+			}
+		}
+
+		
+		.logo>p{
+			font-family: 'Economica';
+			color: $gold;
+			font-size: 3em;
+			margin-top: 0;
+			padding-bottom: 10px;
+
+			@media screen and (min-width: 600px){
+				display: none;
+			}
+		}
+
+		@media screen and (max-width: 600px){
+			visibility: show;
+			height: 50px;
+			margin-bottom: 0px;
+			z-index: 10;
+			width: 100%;
+			display: flex; 
+			flex-direction: flex-row;
+			align-items: flex-j-between;
+			
+		}
 	}
 
-	.footer-pic{
-		background-image: url("img/logo-gold.png");
-		background-size: 100% 100%;
-		height: 40px;
-		width: 40px;
-		-webkit-transform: scale(0.8);
-		margin: 5px 10px 0 10px;
+	.desktop{
+		display: none;
+
+		@media screen and (min-width: 600px){
+			visibility: show;
+			display: flex;
+			flex-direction: row;
+			height: 350px;
+			padding-bottom: 20px;
+			
+
+			.left-box,
+			.right-box{
+				width: 45%;
+			}
+		}
+
+		.right-box a{
+
+			
+				color: $grey;
+				font-size: 1.1em;
+			}
+
+			a:hover{
+				color: $pink;
+			}
+		
+
+		.social-icons{
+			font-size: 1.8em;
+
+			a{
+				padding: 20px;
+				color: $grey;
+			}
+
+			a:hover{
+				color: $pink;
+			}
+		}
+
 	}
 
-	.logo>p{
-		font-family: 'Economica';
-		color: $gold;
-		font-size: 3em;
-		margin-top: 0;
-		padding-bottom: 10px;
+	// Newsletter sign up
+
+	#mc_embed_signup{
+		background:#fff; 
+		clear:left; 
+		font: 10px 'Open Sans', Helvetica , Arial, sans-serif;
+		color: black;
+
+		h2{
+			color: $grey;
+			font-size: 1.5em;
+		} 
+	}
+
+
+	.mc-field-group{
+
+		label{
+			font-size: 12px;
+		}
+
+		input[type="email"]{
+			border: 1px solid $light-grey;
+			border-radius: 2px;
+			//background-color: $light-grey;
+		}
+	}
+
+	#mc_embed_signup{
+
+		input{
+			border: 1px solid $light-grey;
+		}
+	}
+
+	.response #mc_success_response{
+		color: blue;
 	}
 }
 
